--- a/css/style.css
+++ b/css/style.css
@@ -7,8 +7,7 @@ section {
     padding: 60px;
     background-color: #fff;
     width: 80%;
-    margin: auto;
-    margin: 20px;
+    margin: 20px auto;
 }
 
 #tableSection {
